--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -104,7 +104,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 137,
+"row": 1,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -157,11 +157,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 49,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 231,
-"scroll_position": 0.0,
+"row": 244,
+"scroll_position": 234.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -190,20 +190,6 @@ state={
 "h_scroll_position": 0,
 "row": 7,
 "scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://objects/character/player/player.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 232,
-"scroll_position": 222.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -310,20 +296,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://classes/player_camera/player_camera.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([108]),
-"h_scroll_position": 0,
-"row": 119,
-"scroll_position": 104.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://components/tooltip/tooltip.gd]
 
 state={
@@ -393,10 +365,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -416,71 +388,123 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://classes/player_state_machine/player_state_machine.gd]
+[res://assets/models/weapons/projectile_rifle_settings.txt]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Plain Text"
+}
+
+[res://classes/player/player_animator.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 32,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 88,
+"scroll_position": 76.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/player/player_audio.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 31,
+"scroll_position": 27.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/player/player_camera.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([108]),
+"h_scroll_position": 0,
+"row": 119,
+"scroll_position": 104.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://objects/player/player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 60,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 47,
+"scroll_position": 36.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/player/player_state_machine.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 29,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://classes/player_state_machine/base_state.gd]
+[res://classes/player/player_states/base_state.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 21,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 21,
-"selection_to_column": 11,
-"selection_to_line": 21,
-"syntax_highlighter": "GDScript"
-}
-
-[res://classes/player_state_machine/idle_state.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 8,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 23,
-"scroll_position": 4.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 21,
-"selection_to_column": 8,
-"selection_to_line": 23,
-"syntax_highlighter": "GDScript"
-}
-
-[res://classes/player_state_machine/move_state.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 37,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 33,
-"scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://classes/player_state_machine/interact_state.gd]
+[res://classes/player/player_states/idle_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 41,
+"scroll_position": 20.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 41,
+"selection_to_column": 58,
+"selection_to_line": 41,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/player/player_states/interact_state.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -494,76 +518,58 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://classes/player_animator/player_animator.gd]
+[res://classes/player/player_states/move_state.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 84,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 113,
-"scroll_position": 106.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://classes/player_state_machine/rifle_down_idle_state.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 82,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 46,
-"scroll_position": 23.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://classes/player_state_machine/rifle_aim_idle_state.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 86,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 69,
-"scroll_position": 47.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://classes/player_audio/player_audio.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 15,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://assets/models/weapons/projectile_rifle_settings.txt]
+[res://classes/player/player_states/rifle_aim_idle_state.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 48,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
+"row": 64,
+"scroll_position": 49.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/player/player_states/rifle_down_idle_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 31,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 3,
-"selection_from_line": 13,
-"selection_to_column": 8,
-"selection_to_line": 13,
-"syntax_highlighter": "Plain Text"
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/player/player_equipment.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 22,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 36,
+"scroll_position": 28.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
 }
