--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -13,7 +13,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://classes/player_state_machine/base_state.gd"
+"path": "res://classes/player/player_states/base_state.gd"
 }, {
 "base": &"RefCounted",
 "class": &"Cell",
@@ -29,7 +29,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://classes/player_state_machine/idle_state.gd"
+"path": "res://classes/player/player_states/idle_state.gd"
 }, {
 "base": &"BaseState",
 "class": &"InteractState",
@@ -37,7 +37,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://classes/player_state_machine/interact_state.gd"
+"path": "res://classes/player/player_states/interact_state.gd"
 }, {
 "base": &"StaticBody3D",
 "class": &"Interactable",
@@ -61,7 +61,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://classes/player_state_machine/move_state.gd"
+"path": "res://classes/player/player_states/move_state.gd"
 }, {
 "base": &"Node",
 "class": &"PlayerAnimator",
@@ -69,7 +69,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://classes/player_animator/player_animator.gd"
+"path": "res://classes/player/player_animator.gd"
 }, {
 "base": &"Node3D",
 "class": &"PlayerAudio",
@@ -77,7 +77,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://classes/player_audio/player_audio.gd"
+"path": "res://classes/player/player_audio.gd"
 }, {
 "base": &"Camera3D",
 "class": &"PlayerCamera",
@@ -85,7 +85,15 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://classes/player_camera/player_camera.gd"
+"path": "res://classes/player/player_camera.gd"
+}, {
+"base": &"Node",
+"class": &"PlayerEquipment",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/player/player_equipment.gd"
 }, {
 "base": &"Node",
 "class": &"PlayerStateMachine",
@@ -93,7 +101,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://classes/player_state_machine/player_state_machine.gd"
+"path": "res://classes/player/player_state_machine.gd"
 }, {
 "base": &"RefCounted",
 "class": &"PriorityQueue",
@@ -109,7 +117,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://classes/player_state_machine/rifle_aim_idle_state.gd"
+"path": "res://classes/player/player_states/rifle_aim_idle_state.gd"
 }, {
 "base": &"BaseState",
 "class": &"RifleDownIdleState",
@@ -117,5 +125,5 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://classes/player_state_machine/rifle_down_idle_state.gd"
+"path": "res://classes/player/player_states/rifle_down_idle_state.gd"
 }]
