--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -407,11 +407,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 43,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 88,
-"scroll_position": 76.0,
+"row": 8,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -421,10 +421,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 55,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 31,
+"row": 38,
 "scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -449,11 +449,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 60,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 47,
-"scroll_position": 36.0,
+"row": 1,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -491,16 +491,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
+"row": 32,
 "scroll_position": 20.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 41,
-"selection_to_column": 58,
-"selection_to_line": 41,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -541,7 +537,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 64,
-"scroll_position": 49.0,
+"scroll_position": 48.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -569,7 +565,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 36,
-"scroll_position": 28.0,
+"scroll_position": 92.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
