--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -10,15 +10,15 @@ dock_split_2=-38
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=240
-dock_hsplit_3=-216
+dock_hsplit_3=-400
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://objects/characters/female_bot.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/", "res://objects/player/", "res://objects/characters/", "res://maps/prototype/", "res://components/hud/", "res://components/escape_menu/game/", "res://classes/", "res://classes/player/", "res://assets/", "res://assets/textures/prototype/orange/", "res://assets/sounds/")
+dock_filesystem_selected_paths=PackedStringArray("res://autoloads/signals.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://objects/player/", "res://objects/characters/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://autoloads/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,16 +28,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://objects/player/player.tscn", "res://objects/characters/female_bot.tscn")
-current_scene="res://objects/characters/female_bot.tscn"
-center_split_offset=-232
+open_scenes=PackedStringArray("res://objects/characters/female_bot.tscn", "res://objects/player/player.tscn", "res://components/hud/bottom_right_hud.tscn", "res://states/game/game.tscn")
+current_scene="res://components/hud/bottom_right_hud.tscn"
+center_split_offset=-197
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://classes/player/player_states/base_state.gd", "res://classes/player/player_states/idle_state.gd", "res://objects/player/player.gd", "res://classes/player/player_animator.gd", "res://classes/player/player_audio.gd", "res://classes/player/player_equipment.gd", "res://classes/player/player_states/rifle_aim_idle_state.gd", "res://classes/player/player_states/rifle_down_idle_state.gd"]
-selected_script="res://classes/player/player_audio.gd"
+open_scripts=["res://classes/player/player_states/base_state.gd", "res://components/hud/bottom_right_hud.gd", "res://classes/player/player_states/idle_state.gd", "res://objects/player/player.gd", "res://classes/player/player_animator.gd", "res://classes/player/player_audio.gd", "res://classes/player/player_equipment.gd", "res://classes/player/player_states/rifle_aim_idle_state.gd", "res://classes/player/player_states/rifle_down_idle_state.gd", "res://autoloads/signals.gd", "res://components/hud/top_right_hud.gd"]
+selected_script="res://classes/player/player_states/rifle_aim_idle_state.gd"
 open_help=[]
 script_split_offset=142
 list_split_offset=75
