--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -28,11 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://objects/characters/female_bot.tscn", "res://objects/player/player.tscn", "res://components/hud/bottom_right_hud.tscn", "res://states/game/game.tscn")
-current_scene="res://objects/characters/female_bot.tscn"
+open_scenes=PackedStringArray("res://objects/characters/female_bot.tscn", "res://objects/player/player.tscn")
+current_scene="res://objects/player/player.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
