--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -17,12 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 51,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
+"row": 2720,
+"scroll_position": 2709.0,
+"selection": true,
+"selection_from_column": 34,
+"selection_from_line": 2720,
+"selection_to_column": 51,
+"selection_to_line": 2720,
 "syntax_highlighter": "GDScript"
 }
 
@@ -221,7 +225,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 20,
-"scroll_position": 6.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -235,7 +239,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 38,
-"scroll_position": 31.0,
+"scroll_position": 24.0,
 "selection": true,
 "selection_from_column": 53,
 "selection_from_line": 38,
@@ -267,7 +271,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 16,
-"scroll_position": 0.0,
+"scroll_position": 1.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -281,7 +285,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 24,
-"scroll_position": 0.0,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -291,11 +295,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 92,
-"scroll_position": 81.0,
+"scroll_position": 80.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -323,7 +327,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 72,
-"scroll_position": 0.0,
+"scroll_position": 57.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 0,
@@ -341,7 +345,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 43,
-"scroll_position": 0.0,
+"scroll_position": 28.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 0,
@@ -411,12 +415,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 139,
+"column": 46,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 53,
-"scroll_position": 45.0,
-"selection": false,
+"row": 184,
+"scroll_position": 173.0,
+"selection": true,
+"selection_from_column": 45,
+"selection_from_line": 184,
+"selection_to_column": 46,
+"selection_to_line": 184,
 "syntax_highlighter": "GDScript"
 }
 
@@ -425,12 +433,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 59,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 93,
-"scroll_position": 82.0,
-"selection": false,
+"row": 94,
+"scroll_position": 83.0,
+"selection": true,
+"selection_from_column": 58,
+"selection_from_line": 94,
+"selection_to_column": 59,
+"selection_to_line": 94,
 "syntax_highlighter": "GDScript"
 }
 
@@ -453,11 +465,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 64,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
+"row": 18,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -467,12 +479,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
-"scroll_position": 0.0,
-"selection": false,
+"row": 26,
+"scroll_position": 15.0,
+"selection": true,
+"selection_from_column": 33,
+"selection_from_line": 26,
+"selection_to_column": 34,
+"selection_to_line": 26,
 "syntax_highlighter": "GDScript"
 }
 
@@ -485,7 +501,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 21,
-"scroll_position": 0.0,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -495,12 +511,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 48,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 0.0,
-"selection": false,
+"row": 28,
+"scroll_position": 22.0,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 28,
+"selection_to_column": 15,
+"selection_to_line": 28,
 "syntax_highlighter": "GDScript"
 }
 
@@ -509,10 +529,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 13,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -523,11 +543,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
+"row": 38,
+"scroll_position": 17.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -537,11 +557,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 28.0,
+"row": 50,
+"scroll_position": 39.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -551,11 +571,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
+"row": 25,
+"scroll_position": 28.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -565,10 +585,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 174,
+"row": 189,
 "scroll_position": 165.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -583,7 +603,21 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 6,
-"scroll_position": 1.0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/player/player_movement.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 153,
+"scroll_position": 141.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
