--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -96,6 +96,14 @@ list=[{
 "path": "res://classes/player/player_equipment.gd"
 }, {
 "base": &"Node",
+"class": &"PlayerMovement",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/player/player_movement.gd"
+}, {
+"base": &"Node",
 "class": &"PlayerStateMachine",
 "icon": "",
 "is_abstract": false,
