--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -6,11 +6,11 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=146
+dock_split_2=-117
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=318
-dock_hsplit_3=-297
+dock_hsplit_2=317
+dock_hsplit_3=-296
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
@@ -18,7 +18,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://classes/player/player_movement.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://objects/player/", "res://objects/characters/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://classes/", "res://classes/player/", "res://assets/textures/prototype/orange/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://maps/prototype/", "res://components/escape_menu/game/", "res://classes/", "res://classes/player/", "res://classes/message/", "res://autoloads/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -36,8 +36,8 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://classes/player/player_equipment.gd"]
-selected_script="res://classes/player/player_equipment.gd"
+open_scripts=["res://states/game/game.gd", "res://objects/player/player.gd", "res://classes/player/player_movement.gd"]
+selected_script="res://objects/player/player.gd"
 open_help=[]
 script_split_offset=142
 list_split_offset=75
