--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -53,7 +53,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
-"scroll_position": 0.0,
+"scroll_position": 11.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 19,
+"scroll_position": 22.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -165,12 +165,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 49,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 244,
-"scroll_position": 234.0,
-"selection": false,
+"row": 258,
+"scroll_position": 247.0,
+"selection": true,
+"selection_from_column": 10,
+"selection_from_line": 258,
+"selection_to_column": 29,
+"selection_to_line": 258,
 "syntax_highlighter": "GDScript"
 }
 
@@ -465,11 +469,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 6.0,
+"row": 478,
+"scroll_position": 462.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -585,11 +589,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 189,
-"scroll_position": 165.0,
+"row": 150,
+"scroll_position": 138.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -613,11 +617,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 153,
-"scroll_position": 141.0,
-"selection": false,
+"row": 74,
+"scroll_position": 63.0,
+"selection": true,
+"selection_from_column": 8,
+"selection_from_line": 74,
+"selection_to_column": 27,
+"selection_to_line": 74,
 "syntax_highlighter": "GDScript"
 }
