--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -119,6 +119,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://classes/pathfinding/priority_queue.gd"
 }, {
+"base": &"Node3D",
+"class": &"ProjectileRifle",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/weapons/projectile_rifle.gd"
+}, {
 "base": &"BaseState",
 "class": &"RifleAimIdleState",
 "icon": "",
