--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://classes/player/player_movement.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://maps/prototype/", "res://components/escape_menu/game/", "res://classes/", "res://classes/player/", "res://classes/message/", "res://autoloads/", "res://assets/textures/prototype/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://classes/player/player_states/idle_state.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://objects/weapons/", "res://objects/player/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://classes/", "res://classes/player/", "res://classes/player/player_states/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://objects/player/player.tscn")
+open_scenes=PackedStringArray("res://objects/player/player.tscn", "res://objects/weapons/projectile_rifle.tscn")
 current_scene="res://objects/player/player.tscn"
 center_split_offset=-197
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://states/game/game.gd", "res://objects/player/player.gd", "res://classes/player/player_movement.gd"]
-selected_script="res://objects/player/player.gd"
+open_scripts=["res://states/game/game.gd", "res://classes/player/player_states/idle_state.gd", "res://classes/player/player_states/interact_state.gd", "res://main.gd", "res://classes/player/player_states/move_state.gd", "res://objects/player/player.gd", "res://classes/player/player_animator.gd", "res://classes/player/player_equipment.gd", "res://classes/weapons/projectile_rifle.gd", "res://classes/player/player_states/rifle_aim_idle_state.gd", "res://classes/player/player_states/rifle_down_idle_state.gd"]
+selected_script="res://classes/player/player_states/idle_state.gd"
 open_help=[]
 script_split_offset=142
 list_split_offset=75
