--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -91,16 +91,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 14.0,
-"selection": true,
-"selection_from_column": 7,
-"selection_from_line": 29,
-"selection_to_column": 31,
-"selection_to_line": 29,
+"row": 26,
+"scroll_position": 19.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -165,16 +161,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 258,
-"scroll_position": 247.0,
-"selection": true,
-"selection_from_column": 10,
-"selection_from_line": 258,
-"selection_to_column": 29,
-"selection_to_line": 258,
+"row": 173,
+"scroll_position": 165.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -419,16 +411,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 184,
-"scroll_position": 173.0,
+"row": 66,
+"scroll_position": 54.0,
 "selection": true,
-"selection_from_column": 45,
-"selection_from_line": 184,
-"selection_to_column": 46,
-"selection_to_line": 184,
+"selection_from_column": 1,
+"selection_from_line": 66,
+"selection_to_column": 22,
+"selection_to_line": 67,
 "syntax_highlighter": "GDScript"
 }
 
@@ -455,12 +447,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 41,
 "folded_lines": Array[int]([108]),
 "h_scroll_position": 0,
-"row": 119,
-"scroll_position": 104.0,
-"selection": false,
+"row": 120,
+"scroll_position": 25.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 120,
+"selection_to_column": 41,
+"selection_to_line": 120,
 "syntax_highlighter": "GDScript"
 }
 
@@ -469,12 +465,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 42,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 478,
-"scroll_position": 462.0,
-"selection": false,
+"row": 202,
+"scroll_position": 191.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 202,
+"selection_to_column": 12,
+"selection_to_line": 202,
 "syntax_highlighter": "GDScript"
 }
 
@@ -483,16 +483,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 15.0,
-"selection": true,
-"selection_from_column": 33,
-"selection_from_line": 26,
-"selection_to_column": 34,
-"selection_to_line": 26,
+"row": 71,
+"scroll_position": 59.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -501,11 +497,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 6.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -515,16 +511,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 22.0,
-"selection": true,
-"selection_from_column": 13,
-"selection_from_line": 28,
-"selection_to_column": 15,
-"selection_to_line": 28,
+"row": 17,
+"scroll_position": 4.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -551,7 +543,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 38,
-"scroll_position": 17.0,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -561,12 +553,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 50,
-"scroll_position": 39.0,
-"selection": false,
+"row": 70,
+"scroll_position": 56.0,
+"selection": true,
+"selection_from_column": 3,
+"selection_from_line": 70,
+"selection_to_column": 11,
+"selection_to_line": 70,
 "syntax_highlighter": "GDScript"
 }
 
@@ -575,12 +571,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 10,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 28.0,
-"selection": false,
+"row": 16,
+"scroll_position": 5.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 16,
+"selection_to_column": 10,
+"selection_to_line": 16,
 "syntax_highlighter": "GDScript"
 }
 
@@ -589,12 +589,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 150,
-"scroll_position": 138.0,
-"selection": false,
+"row": 171,
+"scroll_position": 156.0,
+"selection": true,
+"selection_from_column": 10,
+"selection_from_line": 171,
+"selection_to_column": 24,
+"selection_to_line": 171,
 "syntax_highlighter": "GDScript"
 }
 
@@ -603,11 +607,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
+"row": 21,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -627,5 +631,19 @@ state={
 "selection_from_line": 74,
 "selection_to_column": 27,
 "selection_to_line": 74,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/weapons/projectile_rifle.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 22,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
