--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://autoloads/sfx_manager.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://objects/weapons/", "res://objects/player/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://classes/weapons/", "res://autoloads/", "res://assets/", "res://assets/textures/", "res://assets/textures/sfx/", "res://assets/textures/sfx/blood/", "res://assets/textures/prototype/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://sfx/projectile_blood_splatter_01.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://sfx/", "res://objects/weapons/", "res://objects/player/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://classes/weapons/", "res://autoloads/", "res://assets/", "res://assets/textures/", "res://assets/textures/sfx/", "res://assets/textures/sfx/blood/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,17 +28,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://objects/player/player.tscn", "res://sfx/blood_mist.tscn")
-current_scene="res://sfx/blood_mist.tscn"
+open_scenes=PackedStringArray()
+current_scene=""
 center_split_offset=-197
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://sfx/blood_mist.gd", "res://objects/player/player.gd", "res://classes/player/player_equipment.gd", "res://classes/weapons/projectile_rifle.gd", "res://classes/player/player_states/rifle_aim_idle_state.gd", "res://autoloads/sfx_manager.gd"]
-selected_script="res://classes/weapons/projectile_rifle.gd"
+open_scripts=["res://sfx/generic_particle.gd", "res://objects/player/player.gd", "res://classes/player/player_equipment.gd", "res://classes/weapons/projectile_rifle.gd", "res://classes/player/player_states/rifle_aim_idle_state.gd", "res://autoloads/sfx_manager.gd"]
+selected_script="res://autoloads/sfx_manager.gd"
 open_help=[]
 script_split_offset=142
 list_split_offset=75
