--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -29,15 +29,15 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://decals/impact_concrete_decal.tscn", "res://maps/prototype/prototype.tscn")
-current_scene="res://decals/impact_concrete_decal.tscn"
+current_scene="res://maps/prototype/prototype.tscn"
 center_split_offset=-197
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://decals/generic_decal.gd", "res://sfx/generic_particle.gd", "res://classes/weapons/projectile_rifle.gd", "res://autoloads/sfx_manager.gd"]
-selected_script="res://autoloads/sfx_manager.gd"
+open_scripts=["res://autoloads/sfx_manager.gd", "res://decals/generic_decal.gd", "res://classes/weapons/projectile_rifle.gd"]
+selected_script="res://decals/generic_decal.gd"
 open_help=[]
 script_split_offset=142
 list_split_offset=75
