--- a/client/.godot/scene_groups_cache.cfg
+++ b/client/.godot/scene_groups_cache.cfg
@@ -1,11 +1,11 @@
 [res://maps/prototype/maze.tscn]
 
-groups=[&"impact_concrete"]
+groups=[&"concrete_material"]
 
 [res://objects/player/player.tscn]
 
-groups=[&"impact_flesh"]
+groups=[&"flesh_material"]
 
 [res://maps/prototype/prototype.tscn]
 
-groups=[&"impact_concrete"]
+groups=[&"concrete_material"]
