--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://decals/impact_concrete_decal.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://objects/weapons/", "res://objects/player/", "res://maps/", "res://maps/prototype/", "res://decals/", "res://components/escape_menu/game/", "res://classes/weapons/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/textures/sfx/concrete/impact_concrete_08.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://objects/", "res://objects/weapons/", "res://objects/player/", "res://maps/", "res://maps/prototype/", "res://decals/", "res://components/escape_menu/game/", "res://classes/", "res://classes/sfx/", "res://assets/", "res://assets/textures/", "res://assets/textures/sfx/")
 dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://decals/impact_concrete_decal.tscn", "res://maps/prototype/prototype.tscn")
+open_scenes=PackedStringArray("res://main.tscn", "res://maps/prototype/prototype.tscn")
 current_scene="res://maps/prototype/prototype.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=1
@@ -36,8 +36,8 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://autoloads/sfx_manager.gd", "res://decals/generic_decal.gd", "res://classes/weapons/projectile_rifle.gd"]
-selected_script="res://decals/generic_decal.gd"
+open_scripts=["res://classes/sfx/generic_decal.gd", "res://classes/weapons/projectile_rifle.gd", "res://autoloads/sfx_manager.gd"]
+selected_script="res://autoloads/sfx_manager.gd"
 open_help=[]
 script_split_offset=142
 list_split_offset=75
