--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -627,10 +627,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
+"column": 97,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 54,
+"h_scroll_position": 46,
+"row": 60,
 "scroll_position": 38.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -641,11 +641,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 39,
-"scroll_position": 30.0,
+"row": 71,
+"scroll_position": 55.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -664,15 +664,15 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://decals/generic_decal.gd]
+[res://classes/sfx/generic_decal.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 17,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
