--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -23,6 +23,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://classes/pathfinding/cell.gd"
 }, {
+"base": &"Decal",
+"class": &"GenericDecal",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/sfx/generic_decal.gd"
+}, {
 "base": &"BaseState",
 "class": &"IdleState",
 "icon": "",
