--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -9,16 +9,16 @@ dock_closed=[]
 dock_split_2=-117
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=274
-dock_hsplit_3=-310
+dock_hsplit_2=273
+dock_hsplit_3=-309
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/textures/sfx/concrete/impact_concrete_08.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://objects/", "res://objects/weapons/", "res://objects/player/", "res://maps/", "res://maps/prototype/", "res://decals/", "res://components/escape_menu/game/", "res://classes/", "res://classes/sfx/", "res://assets/", "res://assets/textures/", "res://assets/textures/sfx/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://sfx/", "res://objects/", "res://objects/weapons/", "res://objects/player/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://classes/", "res://assets/", "res://assets/textures/", "res://assets/textures/sfx/", "res://assets/textures/sfx/muzzle/", "res://assets/models/")
 dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://maps/prototype/prototype.tscn")
-current_scene="res://maps/prototype/prototype.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://maps/prototype/prototype.tscn", "res://sfx/projectile_muzzle_flash.tscn", "res://objects/weapons/projectile_rifle.tscn")
+current_scene="res://objects/weapons/projectile_rifle.tscn"
 center_split_offset=-197
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=1
 
 [ScriptEditor]
 
 open_scripts=["res://classes/sfx/generic_decal.gd", "res://classes/weapons/projectile_rifle.gd", "res://autoloads/sfx_manager.gd"]
-selected_script="res://autoloads/sfx_manager.gd"
+selected_script="res://classes/weapons/projectile_rifle.gd"
 open_help=[]
 script_split_offset=142
 list_split_offset=75
